changed colors to hex

--- a/app.css
+++ b/app.css
@@ -1,11 +1,11 @@
 h1 {
-	color: red;
+	color: #000000;
 }
 
 li {
-	color: green;
+	color: #4B0082;
 }
 
 h4 {
-	color: purple;
+	color: #FF1493;
 }
